[package]
name = 'pallet-ibc'
version = "3.0.0-pre.0"
authors = ['Octopus Network <hi@oct.network>']
edition = '2021'
license = "Apache-2.0"
homepage = "https://oct.network"
repository 	= "https://github.com/octopus-network/substrate-ibc/"
description = "An IBC implementation on Substrate."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.0", default-features = false }
prost-types = { version = "0.11", default-features = false }
prost = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
hex = {version = "0.4.0", default-features = false }

sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }
sp-core = { version = "6.0.0", path = "../../primitives/core" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
sp-tracing = { version = "5.0.0", default-features = false, path = "../../primitives/tracing" }
time = { version = "0.3.11", features = ["macros","parsing"], default-features = false}

ibc = { version = "0.18.0", default-features = false }
ibc-proto = { version = "0.20.0", default-features = false }
tendermint-proto = { version = "=0.23.9", default-features = false }
# beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch="main", default-features = false }

frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }

[dev-dependencies]
hex = '0.4.0'
sha2 = '0.10.2'
serde = { version = "1.0" }
ibc = { version = "0.18.0",  features = ["mocks"] }
sp-io = { version = "6.0.0", path = "../../primitives/io" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" }
sp-std = { version = "4.0.0",  path = "../../primitives/std" }
sp-keyring = { version = "6.0.0", path = "../../primitives/keyring" }
frame-support = { version = "4.0.0-dev", path = "../support" }
pallet-assets = { version = "4.0.0-dev", path = "../assets" }
pallet-balances = { version = "4.0.0-dev", path = "../balances" }
pallet-timestamp = { version = "4.0.0-dev", path = "../timestamp" }
pallet-babe = { version = "4.0.0-dev", path = "../babe" }
sp-version = { version = "5.0.0", path = "../../primitives/version" }
sp-core = { version = "6.0.0", path = "../../primitives/core" }
chrono = "0.4.19"

[features]
default = ['std']
std = [
	'codec/std',
	'log/std',
	"scale-info/std",
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'sp-tracing/std',
	'prost-types/std',	
	'prost/std',
	'ibc/std',
	'ibc-proto/std',
	# 'beefy-light-client/std',
	'serde_json/std',
	'serde/std',	
	'flex-error/std',
	'hex/std',
	'time/std',
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]