[package]
name = "ibc-support"
version = "0.1.0"
authors = ['Octopus Network <hi@oct.network>']
edition = '2021'
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
license = "Apache-2.0"
description = "define iterface for ibc application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ibc crates
ibc = { version = "0.21.1", default-features = false }
ibc-proto = { version = "0.21.0", default-features = false }

# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../../primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../../primitives/std"  }

[features]
default = ['std']
std = [
  "ibc/std",
  "ibc-proto/std",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
]
