[package]
description = "Substrate tests for network protocol"
name = "substrate-test-network"
version = "2.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[dependencies]
babe-primitives = { package = "substrate-consensus-babe-primitives", path = "../../../primitives/consensus/babe" }
bitflags = "1.2.0"
block-builder = { package = "substrate-block-builder", path = "../../../client/block-builder" }
bytes = "0.4.12"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
consensus = { package = "substrate-consensus-common", path = "../../../primitives/consensus/common" }
derive_more = "0.15.0"
either = "1.5.3"
env_logger = "0.7.0"
erased-serde = "0.3.9"
fnv = "1.0.6"
fork-tree = { path = "../../../client/utils/fork-tree" }
futures = "0.1.29"
futures-timer = "0.4.0"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
header_metadata = { package = "substrate-header-metadata", path = "../../../client/header-metadata" }
interfaces = { package = "substrate-client-interfaces", path = "../../../client/interfaces" }
keyring = { package = "substrate-keyring", path = "../../../client/keyring" }
libp2p = { version = "0.13.0", default-features = false, features = ["libp2p-websocket"] }
linked_hash_set = "0.1.3"
linked-hash-map = "0.5.2"
log = "0.4.8"
lru-cache = "0.1.2"
parking_lot = "0.9.0"
peerset = { package = "substrate-peerset", path = "../../../primitives/peerset" }
primitives = { package = "substrate-primitives", path = "../../../primitives/core" }
quickcheck = "0.9.0"
rand = "0.7.2"
rustc-hex = "2.0.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
slog = { version = "2.5.2", features = ["nested-values"] }
slog_derive = "0.1.1"
smallvec = "0.6.10"
sr-primitives = { path = "../../../primitives/sr-primitives" }
tempdir = "0.3.7"
test_client = { package = "substrate-test-client", path = "../../utils/client" }
test_runtime = { package = "substrate-test-runtime", path = "../../utils/runtime" }
tokio = "0.1.22"
tokio-io = "0.1.12"
unsigned-varint = { version = "0.2.2", features = ["codec"] }
void = "1.0.2"
zeroize = "0.10.1"
