[package]
name = "pallet-ics20-transfer"
version = "0.1.0"
authors = ["Octopus Network <hi@oct.network>"]
edition = "2021"
homepage = "https://github.com/octopus-network"
license = "Unlicense"
publish = false
repository = "https://github.com/octopus-network/substrate-ibc"
description = "FRAME pallet ibc protocol ics20 token transfer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# local libraries
# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../../benchmarking" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../../system" }
# third-party crates
hex = { version = "0.4.0", default-features = false }
ibc-support = { version = "0.1.0", default-features = false, path = "../../ibc-support" }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-io = { version = "6.0.0", default-features = false, path = "../../../../primitives/io" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../../../primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../../../primitives/std" }

## for ibc protocl
# octopus ibc-rs
ibc = { version = "0.21.1", default-features = false }
# octopus ibc-proto-rs
ibc-proto = { version = "0.21.0", default-features = false }
tendermint-proto = { version = "=0.25.0", default-features = false }

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, path = "../../../../primitives/core" }
sp-io = { version = "6.0.0", default-features = false, path = "../../../../primitives/io" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../../../primitives/runtime" }

[features]
default = ["std"]
std = [
  "hex/std",
  "codec/std",
  "log/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "ibc/std",
  "ibc-proto/std",
  "ibc-support/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
